# pretty-text-editor

./: LICENSE  Makefile  README.md  poetry.toml  pyproject.toml
development/: create_venv.py  ensure_dependencies.py
src/base/: block.py  exceptions.py  validators.py
src/base/block/: __init__.py  abstract_block.py  config_param.py
src/base/validators/: __init__.py  is_integer.py
src/pretty_text_editor/base/: exceptions.py
src/pretty_text_editor/base/block/: abstract_block.py
src/pretty_text_editor/base/validators/: param_validator.py
src/pretty_text_editor/block/: abstract_block.py  config_param.py  container.py
src/pretty_text_editor/blocks/: base.py
src/pretty_text_editor/blocks/mixins/: __init__.py  with_children.py  with_parents.py
src/pretty_text_editor/mixins/: __init__.py  with_children.py  with_parent.py
src/pretty_text_editor/validators/: is_integer.py
src/utils/: __init__.py
tests/: test_example.py
